--- a/css/poemestyle.css
+++ b/css/poemestyle.css
@@ -44,6 +44,11 @@ body {
 	margin-left: 0;
 	margin-right: 0;
 }
+.centered-table {
+      width: 80%; /* Or any specific width less than 100% */
+      margin-left: auto;
+      margin-right: auto;
+    }
 
 
 
