--- a/css/poemestyle.css
+++ b/css/poemestyle.css
@@ -27,7 +27,7 @@ ul li a:hover {
 	/* permet qu'un élément soit souligner lorsque la souris pose sur elle */
 }
 .joli {
-	width: 80%; /* Ajuste par rapport à la largeur de l'écran */
+	width: 800 px; /* Ajuste par rapport à la largeur de l'écran */
 	min-height: 10 px; /* Agrandi au besoin mais, a une hauteur minimale */
 	padding: 0 px;
 	margin: 0 auto; /* Centre la boite sur la page */
@@ -48,6 +48,7 @@ body {
       margin-left: auto;
       margin-right: auto;
     }
+
 
 
 
