--- a/css/poemestyle.css
+++ b/css/poemestyle.css
@@ -47,7 +47,12 @@ body {
       width: 80%; /* Or any specific width less than 100% */
       margin-left: auto;
       margin-right: auto;
-    }
+}
+table { 
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 
 
