--- a/css/poemestyle.css
+++ b/css/poemestyle.css
@@ -27,16 +27,11 @@ ul li a:hover {
 	/* permet qu'un élément soit souligner lorsque la souris pose sur elle */
 }
 .joli {
-	width: 800 px; /* Ajuste par rapport à la largeur de l'écran */
+	width: 80%; /* Ajuste par rapport à la largeur de l'écran */
 	height: auto; /* Agrandi au besoin mais, a une hauteur minimale */
-	padding: 0 px;
 	margin: 0 auto; /* Centre la boite sur la page */
-	display: flex;
-	justify-content: center;
-	border : 3px solid #F08080;
+	border: 3px solid #F08080;
 	background-color: #ADD8E6;
-	box-sizing: border-box; /* Garantit que le remplissage et la bordure sont inclus dans la largeur et hauteur définie*/
-
 }
 body {
 	background-color: #F0F8FF;
@@ -46,8 +41,12 @@ body {
 table { 
     margin-left: auto;
     margin-right: auto;
-	border-spacing: 100 0 px;
 }
+td {
+  padding-left: 7.5 px;
+  padding-right: 7.5 px;
+}
+
 
 
 
