--- a/css/poemestyle.css
+++ b/css/poemestyle.css
@@ -32,7 +32,7 @@ ul li a:hover {
 	width: 80%; /* Ajuste par rapport à la largeur de l'écran */
 	border : 3px solid #F08080;
 	background-color: #ADD8E6;
-	box-sizing: border-box; /* Garantit que le remplissage et la bordure sont inclus dans la largeur/hauteur définie
+	box-sizing: border-box; /* Garantit que le remplissage et la bordure sont inclus dans la largeur et l'hauteur définie */
 }
 body {
 	background-color: #F0F8FF;
@@ -47,5 +47,6 @@ td {
   padding-left: 20 px;
   padding-right: 20 px;
 }
+
 
 
