--- a/css/poemestyle.css
+++ b/css/poemestyle.css
@@ -29,7 +29,7 @@ ul li a:hover {
 	/* permet qu'un élément soit souligner lorsque la souris pose sur elle */
 }
 .joli {
-	text-align: center;
+	width: 100%;
 	border: 3px solid #F08080;
 	background-color: #ADD8E6;
 	box-sizing: border-box; /* Garantit que le remplissage et la bordure sont inclus dans la largeur et l'hauteur définie */
