--- a/css/poemestyle.css
+++ b/css/poemestyle.css
@@ -1,50 +1,54 @@
 /* Source: https://www.w3schools.com/howto/howto_css_fixed_menu.asp */
 ul {
-	list-style-type: none; /* enlève le format de la liste */
-	margin: 0 auto; /* Centre la boite sur la page */
-	width: 80 %; /* Ajuste par rapport à la largeur de l'écran */
-	padding: 0;
-	display: flex;
-	justify-content: center; /* assure que le navbar est centrer sur la page */
-	border: 3 px solid #F08080;
-	background-color: #ADD8E6;
-	position: sticky; /*Source: https://www.w3schools.com/howto/howto_js_navbar_sticky.asp*/
-	top: 0;
+    list-style-type: none;
+    /* enlève le format de la liste */
+    margin: 0 auto;
+    /* Centre la boite sur la page */
+    width: 80 %;
+    /* Ajuste par rapport à la largeur de l'écran */
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    /* assure que le navbar est centrer sur la page */
+    border: 3px solid #F08080;
+    background-color: #ADD8E6;
+    position: sticky;
+    /*Source: https://www.w3schools.com/howto/howto_js_navbar_sticky.asp*/
+    top: 0;
 }
+
 ul li a {
-	display: block;
-	color: black;
-	text-align: center;
-    text-decoration: none;	/* enlève le format lien pour le rendre visuellement attrayant */
-	font-family: Courier New, monospace; /*Source: https://www.w3schools.com/tags/tag_font.asp */
+    display: block;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    /* enlève le format lien pour le rendre visuellement attrayant */
+    font-family: Courier New, monospace;
+    /*Source: https://www.w3schools.com/tags/tag_font.asp */
 }
 
 ul li a:hover {
-	background-color: #E9967A;
-	/* permet qu'un élément soit souligner lorsque la souris pose sur elle */
+    background-color: #E9967A;
+    /* permet qu'un élément soit souligner lorsque la souris pose sur elle */
 }
+
 .joli {
-	width: 100 %;
-	border: 3 px solid #F08080;
-	background-color: #ADD8E6;
-	box-sizing: border-box; /* Garantit que le remplissage et la bordure sont inclus dans la largeur et l'hauteur définie */
+    width: 100 %;
+    border: 3px solid #F08080;
+    background-color: #ADD8E6;
+  	display: flex;
+    justify-content: center;
+    box-sizing: border-box;
+    /* Garantit que le remplissage et la bordure sont inclus dans la largeur et l'hauteur définie */
 }
+
 body {
-	background-color: #F0F8FF;
-	margin-left: 0;
-	margin-right: 0;
+    background-color: #F0F8FF;
+    margin-left: 0;
+    margin-right: 0;
 }
-table { 
+table {
     margin-left: auto;
     margin-right: auto;
+ 	border-spacing: 25px; /* Source: https://www.w3schools.com/html/html_table_padding_spacing.asp#:~:text=HTML%20tables%20can%20adjust%20the%20padding%20inside,and%20also%20the%20space%20between%20the%20cells. */
 }
-td {
-  padding-left: 20 px;
-  padding-right: 20 px;
-}
-
-
-
-
-
-
