--- a/css/poemestyle.css
+++ b/css/poemestyle.css
@@ -47,4 +47,14 @@ table {
     margin-right: auto;
  	border-spacing: 25px; /* Source: https://www.w3schools.com/html/html_table_padding_spacing.asp#:~:text=HTML%20tables%20can%20adjust%20the%20padding%20inside,and%20also%20the%20space%20between%20the%20cells. */
 }
+.return {
+    width: 100 %;
+    border: 3px solid #F08080;
+    background-color: #ADD8E6;
+  	display: flex;
+    justify-content: center;
+	text-align: center;
+    box-sizing: border-box;
+    /* Garantit que le remplissage et la bordure sont inclus dans la largeur et l'hauteur définie */
+}
 
