--- a/css/poemestyle.css
+++ b/css/poemestyle.css
@@ -1,30 +1,27 @@
 /* Source: https://www.w3schools.com/howto/howto_css_fixed_menu.asp */
 ul {
-    list-style-type: none; /* enlève le format de la liste */
-    margin: 0 auto; /* Centre la boite sur la page */
-    width: 80 %; /* Ajuste par rapport à la largeur de l'écran */
-    padding: 0;
-    display: flex;
-    justify-content: center; /* assure que le navbar est centrer sur la page */
-    border: 3px solid #F08080;
-    background-color: #ADD8E6;
-    position: sticky; /*Source: https://www.w3schools.com/howto/howto_js_navbar_sticky.asp*/
-    top: 0;
+	list-style-type: none;
+	margin-left: 10%;
+	margin-right: 10%;
+	padding: 0;
+	display : flex;
+	justify-content : center;
+	border : 3px solid #F08080;
+	background-color: #ADD8E6;
+	position: sticky;
+	top: 0; /*assure que bare reste fixé*/
+	overflow: hidden;
 }
-
 ul li a {
-    display: block;
-    color: black;
-    text-align: center;
-    text-decoration: none;
-    /* enlève le format lien pour le rendre visuellement attrayant */
-    font-family: Courier New, monospace;
-    /*Source: https://www.w3schools.com/tags/tag_font.asp */
+	display: block;
+	color: black;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none; /*enleve le format lien*/
 }
 
 ul li a:hover {
-    background-color: #E9967A;
-    /* permet qu'un élément soit souligner lorsque la souris pose sur elle */
+	background-color: #E9967A;
 }
 
 .joli {
@@ -33,7 +30,9 @@ ul li a:hover {
     background-color: #ADD8E6;
   	display: flex;
     justify-content: center;
+	text-align: left;
     box-sizing: border-box;
+	text-decoration: none;
     /* Garantit que le remplissage et la bordure sont inclus dans la largeur et l'hauteur définie */
 }
 
@@ -57,4 +56,5 @@ table {
     box-sizing: border-box;
     /* Garantit que le remplissage et la bordure sont inclus dans la largeur et l'hauteur définie */
 }
+
 
