--- a/css/biographiestyle.css
+++ b/css/biographiestyle.css
@@ -24,21 +24,25 @@ ul li a:hover {
 	background-color: #E9967A;
 }
 ol {
-	list-style-type: none;
-	margin-left: 10%;
-	margin-right: 10%;
-	padding: 0;
-	display : flex;
-	justify-content : center;
-	border : 3px solid #F08080;
-	background-color: #ADD8E6;
+  list-style-type: none;
+  margin-left: 30%;
+  margin-right: 30%;
+  padding: 0;
+  width: 40%;
+  justify-content : center;
+  background-color: #ADD8E6;
 }
-ol li a {
-	display: block;
-	color: black;
-	text-align: center;
-	padding: 14px 16px;
-	text-decoration: none;
+
+ol a {
+  display: block;
+  color: black;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+/* Change the link and background color on hover */
+ol li a:hover {
+  background-color: #E9967A;
 }
 
 .joli {
@@ -55,12 +59,6 @@ body {
     background-color: #F0F8FF;
     margin-left: 0;
     margin-right: 0;
-}
-table {
-    text-align: center;
-	margin-left: auto;
-    margin-right: auto;
- 	border-spacing: 15px; /* Source: https://www.w3schools.com/html/html_table_padding_spacing.asp#:~:text=HTML%20tables%20can%20adjust%20the%20padding%20inside,and%20also%20the%20space%20between%20the%20cells. */
 }
 .center { /*Source:https://www.w3schools.com/howto/howto_css_image_center.asp*/
   display: block;
